--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+   background-color: rgb(214, 184, 122); 
 }
 
 .logo-icon {
@@ -19,40 +20,87 @@ nav>a{
     padding-left: 32px;
     padding-right: 32px;
     border: 1px solid;
-}
-
-.banner-container{
-    height: 350px;
-    width: 100%;
-    border: 1px solid;
+    background-color: rgb(203, 146, 76);
+    font-family: 'Montserrat';
 }
 
 
 .profile-content{
     display: flex;
     justify-content: space-evenly;
+    
 }
 
 .profile-item{
     text-align: center;
+    
+    
 }
 
 
 .profile-icon {
-    height: 70px;
-    width: 70px;
+    height: 150px;
+    width: 150px;
     background-size: cover;
     border-radius: 50px;
+    
     }
 
 .profile-1 {
-    background-image: url(../assets/icon5.png);
+    background-image: url(../assets/re.jpg);
+     
 }
 
 .profile-2 {
-    background-image: url(../assets/icon4.png);
+    background-image: url(../assets/dewi.jpg);
+   
 }
 
 .profile-3 {
-    background-image: url(../assets/kraf.png);
+    background-image: url(../assets/oto.jpg);
+   
+}
+
+.Bandung {
+    font-size: larger;
+    font-style: italic;
+    text-align: justify;
+   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+.tokoh {
+    font-size: larger;
+    font-style: italic;
+    text-align: justify;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  
+}
+
+.hasil{
+    padding-right: 200px;
+    text-align :start;
+    border: 4px solid;
+    ALIGN-CONTENT: CENTER;
+    TEXT-ALIGN: left;
+    DISPLAY: INLINE-BLOCK;
+}
+
+.halaman-bawah{
+     font-family: 'Montserrat';
+     font-size: larger;
+}
+
+
+.tengah{
+  
+    font-family: 'Montserrat';
+    font-size: larger;
+}
+
+.divider {
+    flex: 2;
+}
+@media only screen and (max-width: 520px) {
+        .nav-container{
+    flex-direction: column ;
+}
 }
