--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 /*ini css*/
 
+/*header*/
 .nav-container{
     display: flex;
     justify-content: space-between;
@@ -24,7 +25,7 @@ nav>a{
     font-family: 'Montserrat';
 }
 
-
+/*content tokoh*/
 .profile-content{
     display: flex;
     justify-content: space-evenly;
@@ -36,7 +37,6 @@ nav>a{
     
     
 }
-
 
 .profile-icon {
     height: 150px;
@@ -75,6 +75,7 @@ nav>a{
   
 }
 
+/*form bawah*/
 .hasil{
     padding-right: 200px;
     text-align :start;
@@ -96,11 +97,3 @@ nav>a{
     font-size: larger;
 }
 
-.divider {
-    flex: 2;
-}
-@media only screen and (max-width: 520px) {
-        .nav-container{
-    flex-direction: column ;
-}
-}
